--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/VibeWidgets.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/VibeWidgets.css
@@ -6,13 +6,14 @@
 
 .childBindersWidget_ListOfWorkspacesPanel, .childBindersWidget_ListOfFoldersPanel
 {
-	border-color: #BABDB6;
+	border-color: #e0e0e0;
 	border-style: solid solid solid;
 	border-width: 1px;
 	margin-bottom: 4px;
 	padding-top: 2px;
 	padding-left: 4px;
 	padding-bottom: 2px;
+	border-radius: 2px;
 }
 
 .childBindersWidget_ListOfWorkspacesPanel_HeaderPanel, .childBindersWidget_ListOfFoldersPanel_HeaderPanel
@@ -22,8 +23,8 @@
 
 .childBindersWidget_ListOfWorkspacesPanel_HeaderText, .childBindersWidget_ListOfFoldersPanel_HeaderText
 {
-	color: #5691A6;
-	font-size: 18px;
+	color: #505354;
+	font-size: 16px;
 	padding-left: 4px;
 }
 
@@ -34,7 +35,7 @@
 
 .childBindersWidget_ListOfWorkspacesPanel_workspaceLabel, .childBindersWidget_ListOfFoldersPanel_folderLabel
 {
-    color: #135C8F;
+    color: #036f9f;
     font-size: 14px;
     line-height: 15px;
     padding-left: 4px;
@@ -121,7 +122,7 @@
 
 .projectInfoWidget_ManagerName:hover
 {
-	color: #135c8f;
+	color: #036f9f;
 	cursor: pointer;
 	background: url(images/blends/teal_slice.png) repeat-x;
 	background-position:center;
